2010-01-08  Eric Seidel  <eric@webkit.org>

        No review, rolling out r52983.
        http://trac.webkit.org/changeset/52983
        https://bugs.webkit.org/show_bug.cgi?id=33321

        Broke 59 JavaScriptCore tests.  I don't think Kent knew about
        run-javascriptcore-tests.  Sadly neither does the commit-bot,
        yet.

        * runtime/RegExp.cpp:
        (JSC::RegExp::RegExp):
        * runtime/RegExp.h:
        (JSC::RegExp::flags):

2010-01-08  Eric Seidel  <eric@webkit.org>

        No review, rolling out r52981.
        http://trac.webkit.org/changeset/52981
        https://bugs.webkit.org/show_bug.cgi?id=33319

        Caused two JS tests to start failing:
        ecma_2/RegExp/properties-001.js and js1_2/regexp/toString.js

        * runtime/RegExpPrototype.cpp:
        (JSC::regExpProtoFuncToString):

2010-01-08  Kent Hansen  <kent.hansen@nokia.com>

        Reviewed by Darin Adler.

        Don't store RegExp flags string representation
        https://bugs.webkit.org/show_bug.cgi?id=33321

        It's unused; the string representation is reconstructed from flags.

        * runtime/RegExp.cpp:
        (JSC::RegExp::RegExp):
        * runtime/RegExp.h:

2010-01-08  Kent Hansen  <kent.hansen@nokia.com>

        Reviewed by Darin Adler.

        RegExp.prototype.toString returns "//" for empty regular expressions
        https://bugs.webkit.org/show_bug.cgi?id=33319

        "//" starts a single-line comment, hence "/(?:)/" should be used, according to ECMA.

        * runtime/RegExpPrototype.cpp:
        (JSC::regExpProtoFuncToString):

2010-01-08  Norbert Leser  <norbert.leser@nokia.com>

        Reviewed by Darin Adler.

        RVCT compiler with "-Otime -O3" optimization tries to optimize out 
        inline new'ed pointers that are passed as arguments.
        Proposed patch assigns new'ed pointer explicitly outside function call.

        https://bugs.webkit.org/show_bug.cgi?id=33084

        * API/JSClassRef.cpp: